syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.disc99.grpc.apps.hotel";

package hotel;

service HotelService {
    rpc Add (Hotel) returns (HotelId) {}
    rpc FindBy (HotelId) returns (HotelDetail) {}
    rpc Search (google.protobuf.Empty) returns (HotelSummaries) {}
}

message HotelId {
    int32 id = 1;
}

message Hotel {
    string name = 1;
}

message HotelDetail {
    int32 id = 1;
    string name = 2;
}

message HotelSummaries {
    repeated HotelSummary summaries = 1;
}

message HotelSummary {
    int32 id = 1;
    string name = 2;
}